--- a/Resources/Private/Language/br.locallang_db.xlf
+++ b/Resources/Private/Language/br.locallang_db.xlf
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" target-language="ro" datatype="plaintext" original="messages" date="2014-01-26T15:19:08Z" product-name="static_info_tables_no">
+	<file source-language="en" target-language="br" datatype="plaintext" original="messages" date="2014-01-26T15:19:10Z" product-name="static_info_tables_no">
 		<header/>
 		<body>
+			<trans-unit id="static_territories_item.tr_name_no" xml:space="preserve" approved="yes">
+				<source>Name (NO):</source>
+				<target>Nome (NO):</target>
+			</trans-unit>
 			<trans-unit id="static_countries_item.cn_official_name_no" xml:space="preserve" approved="yes">
 				<source>Official name (NO):</source>
-				<target>Numele oficial (NO):</target>
+				<target>Nome oficial (NO):</target>
 			</trans-unit>
 			<trans-unit id="static_countries_item.cn_short_no" xml:space="preserve" approved="yes">
 				<source>Short name (NO):</source>
-				<target>Nume prescurtat (NO):</target>
+				<target>Nome curto (NO):</target>
 			</trans-unit>
 			<trans-unit id="static_country_zones_item.zn_name_no" xml:space="preserve" approved="yes">
 				<source>Name (NO):</source>
-				<target>Nume (NO):</target>
-			</trans-unit>
-			<trans-unit id="static_currencies_item.cu_name_no" xml:space="preserve" approved="yes">
-				<source>Name (NO):</source>
-				<target>Nume (NO):</target>
-			</trans-unit>
-			<trans-unit id="static_currencies_item.cu_sub_name_no" xml:space="preserve" approved="yes">
-				<source>Sub name (NO):</source>
-				<target>Subnume (NO):</target>
+				<target>Nome (NO):</target>
 			</trans-unit>
 			<trans-unit id="static_languages_item.lg_name_no" xml:space="preserve" approved="yes">
 				<source>Name (NO):</source>
-				<target>Nume (NO):</target>
+				<target>Nome (NO):</target>
 			</trans-unit>
-			<trans-unit id="static_territories_item.tr_name_no" xml:space="preserve" approved="yes">
+			<trans-unit id="static_currencies_item.cu_name_no" xml:space="preserve" approved="yes">
 				<source>Name (NO):</source>
-				<target>Nume (NO):</target>
+				<target>Nome (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_currencies_item.cu_sub_name_no" xml:space="preserve" approved="yes">
+				<source>Sub name (NO):</source>
+				<target>Sub nome (NO):</target>
 			</trans-unit>
 		</body>
 	</file>
