--- a/Resources/Private/Language/fr.locallang_db.xlf
+++ b/Resources/Private/Language/fr.locallang_db.xlf
@@ -1,40 +1,36 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" target-language="fr" datatype="plaintext" original="messages" date="2017-02-02T13:06:11Z">
-		<header>
-			<description>Static Info Tables Language Pack</description>
-			<type>database</type>
-			<generator>LFEditor</generator>
-		</header>
+	<file source-language="en" target-language="fr" datatype="plaintext" original="messages" date="2014-01-26T15:19:07Z" product-name="static_info_tables_no">
+		<header/>
 		<body>
-		<trans-unit id="static_countries_item.cn_official_name_no" approved="yes">
-			<source>Official name (NO):</source>
-			<target>Nom officiel (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_countries_item.cn_short_no" approved="yes">
-			<source>Short name (NO):</source>
-			<target>Nom court (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_country_zones_item.zn_name_no" approved="yes">
-			<source>Name (NO):</source>
-			<target>Nom (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_currencies_item.cu_name_no" approved="yes">
-			<source>Name (NO):</source>
-			<target>Nom (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_currencies_item.cu_sub_name_no" approved="yes">
-			<source>Sub name (NO):</source>
-			<target>Nom de subdivision (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_languages_item.lg_name_no" approved="yes">
-			<source>Name (NO):</source>
-			<target>Nom (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_territories_item.tr_name_no" approved="yes">
-			<source>Name (NO):</source>
-			<target>Nom (NO):</target>
-		</trans-unit>
+			<trans-unit id="static_countries_item.cn_official_name_no" xml:space="preserve" approved="yes">
+				<source>Official name (NO):</source>
+				<target>Nom officiel (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_countries_item.cn_short_no" xml:space="preserve" approved="yes">
+				<source>Short name (NO):</source>
+				<target>Nom court (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_country_zones_item.zn_name_no" xml:space="preserve" approved="yes">
+				<source>Name (NO):</source>
+				<target>Nom (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_currencies_item.cu_name_no" xml:space="preserve" approved="yes">
+				<source>Name (NO):</source>
+				<target>Nom (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_currencies_item.cu_sub_name_no" xml:space="preserve" approved="yes">
+				<source>Sub name (NO):</source>
+				<target>Nom no subdivision (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_languages_item.lg_name_no" xml:space="preserve" approved="yes">
+				<source>Name (NO):</source>
+				<target>Nom (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_territories_item.tr_name_no" xml:space="preserve" approved="yes">
+				<source>Name (NO):</source>
+				<target>Nom (NO):</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
