--- a/Resources/Private/Language/no.locallang_db.xlf
+++ b/Resources/Private/Language/no.locallang_db.xlf
@@ -1,40 +1,36 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
 	<file source-language="en" target-language="no" datatype="plaintext" original="messages" date="2017-02-02T13:06:11Z">
-		<header>
-			<description>Static Info Tables Language Pack</description>
-			<type>database</type>
-			<generator>LFEditor</generator>
-		</header>
+		<header/>
 		<body>
-		<trans-unit id="static_countries_item.cn_official_name_no" approved="yes">
-			<source>Official name (NO):</source>
-			<target>Offesielt navn (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_countries_item.cn_short_no" approved="yes">
-			<source>Short name (NO):</source>
-			<target>Kort navn (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_country_zones_item.zn_name_no" approved="yes">
-			<source>Name (NO):</source>
-			<target>Navn (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_currencies_item.cu_name_no" approved="yes">
-			<source>Name (NO):</source>
-			<target>Navn (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_currencies_item.cu_sub_name_no" approved="yes">
-			<source>Sub name (NO):</source>
-			<target>Navn på underområde (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_languages_item.lg_name_no" approved="yes">
-			<source>Name (NO):</source>
-			<target>Navn (NO):</target>
-		</trans-unit>
-		<trans-unit id="static_territories_item.tr_name_no" approved="yes">
-			<source>Name (NO):</source>
-			<target>Navn (NO):</target>
-		</trans-unit>
+			<trans-unit id="static_countries_item.cn_official_name_no" approved="yes">
+				<source>Official name (NO):</source>
+				<target>Offesielt navn (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_countries_item.cn_short_no" approved="yes">
+				<source>Short name (NO):</source>
+				<target>Kort navn (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_country_zones_item.zn_name_no" approved="yes">
+				<source>Name (NO):</source>
+				<target>Navn (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_currencies_item.cu_name_no" approved="yes">
+				<source>Name (NO):</source>
+				<target>Navn (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_currencies_item.cu_sub_name_no" approved="yes">
+				<source>Sub name (NO):</source>
+				<target>Navn på unnorområno (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_languages_item.lg_name_no" approved="yes">
+				<source>Name (NO):</source>
+				<target>Navn (NO):</target>
+			</trans-unit>
+			<trans-unit id="static_territories_item.tr_name_no" approved="yes">
+				<source>Name (NO):</source>
+				<target>Navn (NO):</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
